<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageColorPrimary">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/app_name"
        app:titleTextColor="#ffffff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolBar"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <Button
                        android:id="@+id/btnSplashAd"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_background_button_selector"
                        android:stateListAnimator="@null"
                        android:text="@string/splash_ad" />

                    <Button
                        android:id="@+id/btnSplashVPlusAd"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_background_button_selector"
                        android:stateListAnimator="@null"
                        android:text="@string/splash_v_plus_ad"
                        android:layout_marginLeft="16dp"/>

                </LinearLayout>

                <Button
                    android:id="@+id/btnNativeAd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_background_button_selector"
                    android:stateListAnimator="@null"
                    android:text="@string/native_ad"
                    android:textColor="@color/textColorBlack" />

                <Button
                    android:id="@+id/btnBannerAd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_background_button_selector"
                    android:stateListAnimator="@null"
                    android:text="@string/banner_ad"
                    android:textColor="@color/textColorBlack" />

                <Button
                    android:id="@+id/btnInterstitialAd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_background_button_selector"
                    android:stateListAnimator="@null"
                    android:text="@string/interstitial_ad"
                    android:textColor="@color/textColorBlack" />

                <Button
                    android:id="@+id/btnRewardVodAd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_background_button_selector"
                    android:stateListAnimator="@null"
                    android:text="@string/reward_vod_ad"
                    android:textColor="@color/textColorBlack" />

                <Button
                    android:id="@+id/btnFullScreenAd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_background_button_selector"
                    android:stateListAnimator="@null"
                    android:text="@string/full_screen_vod_ad"
                    android:textColor="@color/textColorBlack" />

                <Button
                    android:id="@+id/btnDrawVodAd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_background_button_selector"
                    android:stateListAnimator="@null"
                    android:text="@string/draw_vod_ad"
                    android:textColor="@color/textColorBlack" />

                <Button
                    android:id="@+id/btnContentMoudle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_background_button_selector"
                    android:stateListAnimator="@null"
                    android:text="@string/content_module"
                    android:textColor="@color/textColorBlack" />

                <Button
                    android:id="@+id/btnAdmobileDlAdModule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_background_button_selector"
                    android:stateListAnimator="@null"
                    android:text="@string/admobile_dl_ad" />

                <Button
                    android:id="@+id/btnInterstitialAutoClose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_background_button_selector"
                    android:stateListAnimator="@null"
                    android:text="@string/interstitial_auto_close_ad" />

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:lineSpacingExtra="2dp"
            android:padding="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/flContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

</RelativeLayout>
